--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="A product of emergent.sh" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -18,8 +17,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Emergent | Fullstack App</title>
-        <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script>
+        <title>Fullstack App | Analytics</title>
         <!--
         These two scripts have been added for the testing, please do not edit or remove them
         -->
@@ -33,7 +31,7 @@
             if (window.self !== window.top && '%REACT_APP_ENABLE_VISUAL_EDITS%' === 'true') {
                 // Load debug monitor script
                 var debugScript = document.createElement('script');
-                debugScript.src = 'https://assets.emergent.sh/scripts/debug-monitor.js';
+                debugScript.src = '';
                 document.head.appendChild(debugScript);
 
                 // Configure Tailwind
@@ -63,9 +61,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
         <a
-            id="emergent-badge"
+            id="badge"
             target="_blank"
-            href="https://app.emergent.sh/?utm_source=emergent-badge"
+            href=""
             style="
                 display: flex !important;
                 align-items: center !important;
@@ -105,7 +103,7 @@
                         margin-bottom: 0;
                     "
                 >
-                    Made with Emergent
+                    Made By Tanisha
                 </p>
             </div>
         </a>
