--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,7 +17,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Fullstack App | Analytics</title>
+        <title>SignalVista | Custom FullStack Analytics</title>
         <!--
         These two scripts have been added for the testing, please do not edit or remove them
         -->
